@@ -1,3 +1,14 @@
+2007-04-21  Alan Modra  <amodra@bigpond.net.au>
+
+	* as.h (ENABLE_CHECKING): Default define to 0.
+	(know): Assert if ENABLE_CHECKING.
+	(struct relax_type): Remove superfluous declaration.
+	* configure.in (--enable-checking): New.
+	* configure: Regenerate.
+	* config.in: Regenerate.
+	* config/tc-ppc.c (ppc_setup_opcodes): Do checks when ENABLE_CHECKING.
+	Check for duplicate powerpc_operands entries.
+
 2007-04-20  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* config/tc-m68k.c (mcf5253_ctrl): New.
